GH Security fixes

--- a/.github/workflows/build_container_template.yml
+++ b/.github/workflows/build_container_template.yml
@@ -25,6 +25,11 @@ on:
         type: string
         default: 'vooplv/webcontainer:core-dev'
 
+permissions:
+  contents: read
+  actions: read
+  security-events: write
+
 jobs:
   validate:
     runs-on: ${{ inputs.runner }}
